--- a/README
+++ b/README
@@ -2,7 +2,6 @@
 
 == Unfinished Code, Not Running
 
-* tested upto lower.bound, out of memory error
 * votes are truncated to reduce memory usage
-* likely problems with sparse to non-sparse matrix functions in untested portions
+* problems with lower bound function expected
 
